fix error in dashbpard

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -6,7 +6,7 @@
   "contact": "اتصل بنا",
   "stores": "المتاجر",
   "dashboard": "لوحة التحكم",
-  "admin": "الإدارة",
+  "admin_panel": "الإدارة",
   "logout": "تسجيل الخروج",
   "login": "تسجيل الدخول",
   "signup": "إنشاء حساب",
@@ -23,7 +23,40 @@
     "view_details": "عرض التفاصيل",
     "visit_shop": "زيارة المحل",
     "remove": "حذف",
-    "select_category": "اختر الفئة"
+    "select_category": "اختر الفئة",
+    "sign_up": "إنشاء حساب",
+    "sign_in": "تسجيل الدخول",
+    "continue": "متابعة",
+    "back": "رجوع",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "add": "إضافة",
+    "submit": "إرسال",
+    "confirm": "تأكيد",
+    "close": "إغلاق",
+    "next": "التالي",
+    "previous": "السابق",
+    "finish": "إنهاء",
+    "retry": "إعادة المحاولة",
+    "refresh": "تحديث",
+    "load_more": "تحميل المزيد",
+    "show_more": "عرض المزيد",
+    "show_less": "عرض أقل",
+    "apply": "تطبيق",
+    "reset": "إعادة تعيين",
+    "clear": "مسح",
+    "search": "بحث",
+    "filter": "تصفية",
+    "sort": "ترتيب",
+    "upload": "رفع",
+    "download": "تحميل",
+    "share": "مشاركة",
+    "copy": "نسخ",
+    "print": "طباعة",
+    "export": "تصدير",
+    "import": "استيراد"
   },
   "sections": {
     "featured_stores": "متاجر مميزة",
@@ -95,9 +128,89 @@
     "no_favorites": "لا توجد مفضلة بعد",
     "save_instruction": "احفظ منتجاتك المفضلة بالنقر على أيقونة القلب في أي منتج"
   },
+  "auth": {
+    "login": {
+      "title": "أهلاً بك",
+      "subtitle": "يرجى إدخال بياناتك للوصول إلى حسابك",
+      "email_label": "أدخل بريدك الإلكتروني",
+      "email_placeholder": "البريد الإلكتروني *",
+      "password_label": "كلمة المرور",
+      "password_placeholder": "كلمة المرور *",
+      "remember_me": "تذكرني",
+      "forgot_password": "نسيت كلمة المرور؟",
+      "login_button": "تسجيل الدخول",
+      "google_login": "تسجيل الدخول بـ Google",
+      "no_account": "ليس لديك حساب؟",
+      "sign_up_link": "إنشاء حساب"
+    },
+    "register": {
+      "title": "إنشاء حساب",
+      "subtitle": "انضم إلى مجتمع ديبلا واكتشف المجوهرات الرائعة",
+      "first_name_label": "الاسم الأول",
+      "first_name_placeholder": "أدخل اسمك الأول",
+      "last_name_label": "الاسم الأخير",
+      "last_name_placeholder": "أدخل اسمك الأخير",
+      "email_label": "البريد الإلكتروني *",
+      "email_placeholder": "أدخل بريدك الإلكتروني",
+      "phone_label": "رقم الهاتف",
+      "phone_placeholder": "أدخل رقم هاتفك",
+      "password_label": "كلمة المرور *",
+      "password_placeholder": "أدخل كلمة المرور",
+      "confirm_password_label": "تأكيد كلمة المرور *",
+      "confirm_password_placeholder": "أعد إدخال كلمة المرور",
+      "agree_terms": "أوافق على الشروط والأحكام",
+      "register_button": "إنشاء الحساب",
+      "google_register": "إنشاء حساب بـ Google",
+      "have_account": "لديك حساب بالفعل؟",
+      "login_link": "تسجيل الدخول",
+      "creating_account": "جاري إنشاء الحساب...",
+      "or_register_with": "أو إنشاء حساب بـ"
+    },
+    "user_type": {
+      "title": "إنشاء حسابك",
+      "subtitle": "انضم إلى مجتمع ديبلا واكتشف المجوهرات الرائعة",
+      "customer_title": "مستخدم عادي",
+      "customer_description": "تصفح واستكشف متاجر الذهب",
+      "seller_title": "صاحب متجر",
+      "seller_description": "سجل متجر المجوهرات الخاص بك",
+      "continue_button": "متابعة",
+      "back_to_login": "العودة لتسجيل الدخول"
+    },
+    "validation": {
+      "required_field": "هذا الحقل مطلوب",
+      "invalid_email": "البريد الإلكتروني غير صحيح",
+      "password_min_length": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+      "passwords_not_match": "كلمة المرور غير متطابقة",
+      "agree_terms_required": "يجب الموافقة على الشروط والأحكام",
+      "invalid_phone": "رقم الهاتف غير صحيح"
+    }
+  },
   "messages": {
     "removed_from_favorites": "تم الحذف من المفضلة",
-    "failed_to_remove": "فشل في حذف المفضلة"
+    "failed_to_remove": "فشل في حذف المفضلة",
+    "success": {
+      "login": "تم تسجيل الدخول بنجاح",
+      "register": "تم إنشاء الحساب بنجاح",
+      "logout": "تم تسجيل الخروج بنجاح",
+      "update": "تم التحديث بنجاح",
+      "delete": "تم الحذف بنجاح",
+      "create": "تم الإنشاء بنجاح",
+      "save": "تم الحفظ بنجاح",
+      "upload": "تم الرفع بنجاح"
+    },
+    "error": {
+      "general": "حدث خطأ ما، يرجى المحاولة مرة أخرى",
+      "network": "خطأ في الاتصال بالشبكة",
+      "unauthorized": "غير مصرح لك بالوصول",
+      "not_found": "الصفحة غير موجودة",
+      "validation": "يرجى التحقق من البيانات المدخلة",
+      "server": "خطأ في الخادم",
+      "timeout": "انتهت مهلة الاتصال",
+      "invalid_credentials": "بيانات الدخول غير صحيحة",
+      "email_exists": "البريد الإلكتروني مستخدم بالفعل",
+      "weak_password": "كلمة المرور ضعيفة",
+      "registration_failed": "فشل في إنشاء الحساب"
+    }
   },
   "shop_details": {
     "about_shop": "عن المتجر",
@@ -132,30 +245,252 @@
     "watches": "ساعات",
     "other": "أخرى"
   },
-  "footer": {
-  "company": "الشركة",
-  "about_us": "من نحن",
-  "contact_us": "اتصل بنا",
-  "careers": "الوظائف",
-  "news": "الأخبار",
-  "support": "الدعم",
-  "help_center": "مركز المساعدة",
-  "faq": "الأسئلة الشائعة",
-  "privacy_policy": "سياسة الخصوصية",
-  "terms_conditions": "الشروط والأحكام",
-  "legal": "قانوني",
-  "returns_policy": "سياسة الإرجاع",
-  "shipping_policy": "سياسة الشحن",
-  "quality_guarantee": "ضمان الجودة",
-  "customer_complaints": "شكاوى العملاء",
-  "contact": {
-    "phone": "رقم الهاتف",
-    "email": "البريد الإلكتروني",
-    "address": "العنوان"
+  "navigation": {
+    "home": "الرئيسية",
+    "products": "المنتجات",
+    "shops": "المتاجر",
+    "favorites": "المفضلة",
+    "about": "من نحن",
+    "contact": "اتصل بنا",
+    "dashboard": "لوحة التحكم",
+    "profile": "الملف الشخصي",
+    "settings": "الإعدادات",
+    "help": "المساعدة",
+    "logout": "تسجيل الخروج",
+    "login": "تسجيل الدخول",
+    "register": "إنشاء حساب"
   },
-  "made_with_love": "صنع بـ",
-  "in_egypt": "في مصر",
-  "all_rights_reserved": "جميع الحقوق محفوظة",
-  "follow_us": "تابعنا"
-}
+  "common": {
+    "loading": "جاري التحميل...",
+    "error": "خطأ",
+    "success": "نجح",
+    "warning": "تحذير",
+    "info": "معلومات",
+    "confirm": "تأكيد",
+    "cancel": "إلغاء",
+    "yes": "نعم",
+    "no": "لا",
+    "ok": "موافق",
+    "close": "إغلاق",
+    "save": "حفظ",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "add": "إضافة",
+    "remove": "إزالة",
+    "update": "تحديث",
+    "create": "إنشاء",
+    "view": "عرض",
+    "details": "التفاصيل",
+    "more": "المزيد",
+    "less": "أقل",
+    "all": "الكل",
+    "none": "لا شيء",
+    "select": "اختيار",
+    "selected": "مختار",
+    "available": "متوفر",
+    "unavailable": "غير متوفر",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "enabled": "مفعل",
+    "disabled": "معطل",
+    "online": "متصل",
+    "offline": "غير متصل",
+    "new": "جديد",
+    "old": "قديم",
+    "recent": "حديث",
+    "popular": "شائع",
+    "featured": "مميز",
+    "recommended": "موصى به",
+    "best_seller": "الأكثر مبيعاً",
+    "on_sale": "في التخفيضات",
+    "free": "مجاني",
+    "premium": "مميز",
+    "basic": "أساسي",
+    "advanced": "متقدم",
+    "professional": "احترافي"
+  },
+  "pages": {
+    "home": {
+      "title": "الرئيسية",
+      "search_placeholder": "ابحث عن المجوهرات، المتاجر، المنتجات...",
+      "featured_shops": "المتاجر المميزة",
+      "browse_all_shops": "تصفح جميع المتاجر",
+      "why_choose_us": "لماذا تختارنا؟",
+      "quality_guarantee": "ضمان الجودة",
+      "trusted_stores": "متاجر موثوقة",
+      "best_prices": "أفضل الأسعار"
+    },
+    "products": {
+      "title": "المنتجات",
+      "all_products": "جميع المنتجات",
+      "categories": "الفئات",
+      "filter": "تصفية",
+      "sort": "ترتيب",
+      "sort_by": "ترتيب حسب",
+      "no_products": "لا توجد منتجات",
+      "loading": "جاري تحميل المنتجات...",
+      "search_results": "نتائج البحث عن",
+      "found_products": "تم العثور على {{count}} منتج يطابق بحثك",
+      "available_products": "{{count}} منتج متاح",
+      "search_for": "نتائج البحث عن:",
+      "category": "الفئة:",
+      "clear_search": "مسح البحث",
+      "clear_filters": "مسح الفلاتر",
+      "search": "البحث",
+      "filtered": "مفلتر",
+      "no_results_found": "لم يتم العثور على نتائج. جرب كلمات مختلفة أو تصفح فئاتنا!",
+      "no_products_in_category": "لا توجد منتجات في هذه الفئة حتى الآن. تحقق قريباً للوافدات الجديدة!",
+      "start_exploring": "ابدأ استكشاف مجموعة المجوهرات الرائعة لدينا!",
+      "no_products_found": "لم يتم العثور على منتجات",
+      "try_different_search": "جرب تعديل مصطلحات البحث أو تصفح فئاتنا",
+      "no_products_match_filters": "لا توجد منتجات تطابق الفلاتر",
+      "try_remove_filters": "جرب إزالة بعض الفلاتر لرؤية المزيد من المنتجات",
+      "try_modify_search": "جرب تعديل البحث أو الفلاتر"
+    },
+    "product_details": {
+      "quantity": "الكمية",
+      "secure_payment": "دفع آمن",
+      "free_shipping": "شحن مجاني",
+      "30_day_return": "إرجاع خلال 30 يوم",
+      "specialties": "التخصصات",
+      "key_features": "الميزات الرئيسية",
+      "product_description": "وصف المنتج",
+      "available": "متوفر",
+      "unknown_shop": "متجر غير معروف",
+      "by": "من",
+      "reviews": "تقييم",
+      "sold": "مُباع",
+      "egp": "جنيه",
+      "reserve_now": "احجز المنتج الآن",
+      "pay_and_reserve": "ادفع {{amount}} جنيه واحجز المنتج",
+      "remaining_amount": "المبلغ المتبقي: {{amount}} جنيه",
+      "pay_on_delivery": "يُدفع عند الاستلام",
+      "book_appointment": "حجز موعد",
+      "chat_now": "دردشة الآن",
+      "visit_shop": "زيارة المتجر",
+      "processing": "جاري المعالجة..."
+    },
+    "shops": {
+      "title": "المتاجر",
+      "all_shops": "جميع المتاجر",
+      "featured": "المميزة",
+      "verified": "موثقة",
+      "no_shops": "لا توجد متاجر",
+      "loading": "جاري تحميل المتاجر...",
+      "search_placeholder": "ابحث عن المتاجر...",
+      "filter_by_location": "تصفية حسب الموقع",
+      "filter_by_rating": "تصفية حسب التقييم",
+      "sort_by": "ترتيب حسب",
+      "newest": "الأحدث",
+      "oldest": "الأقدم",
+      "highest_rated": "الأعلى تقييماً",
+      "lowest_rated": "الأقل تقييماً",
+      "most_products": "الأكثر منتجات",
+      "least_products": "الأقل منتجات",
+      "view_shop": "عرض المتجر",
+      "contact_shop": "التواصل مع المتجر",
+      "shop_details": "تفاصيل المتجر",
+      "products_count": "{{count}} منتج",
+      "rating": "التقييم",
+      "location": "الموقع",
+      "phone": "الهاتف",
+      "working_hours": "ساعات العمل",
+      "no_shops_found": "لم يتم العثور على متاجر",
+      "try_different_search": "جرب البحث بكلمات مختلفة",
+      "clear_filters": "مسح الفلاتر"
+    },
+    "not_found": {
+      "title": "الصفحة غير موجودة",
+      "message": "عذراً، الصفحة التي تبحث عنها غير موجودة",
+      "back_home": "العودة للرئيسية"
+    }
+  },
+  "forms": {
+    "required": "مطلوب",
+    "optional": "اختياري",
+    "submit": "إرسال",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "confirm": "تأكيد",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "address": "العنوان",
+    "description": "الوصف",
+    "price": "السعر",
+    "category": "الفئة",
+    "image": "الصورة",
+    "select_image": "اختر صورة",
+    "upload_image": "رفع صورة"
+  },
+  "footer": {
+    "company": "الشركة",
+    "about_us": "من نحن",
+    "contact_us": "اتصل بنا",
+    "careers": "الوظائف",
+    "news": "الأخبار",
+    "support": "الدعم",
+    "help_center": "مركز المساعدة",
+    "faq": "الأسئلة الشائعة",
+    "privacy_policy": "سياسة الخصوصية",
+    "terms_conditions": "الشروط والأحكام",
+    "legal": "قانوني",
+    "returns_policy": "سياسة الإرجاع",
+    "shipping_policy": "سياسة الشحن",
+    "quality_guarantee": "ضمان الجودة",
+    "customer_complaints": "شكاوى العملاء",
+    "contact": {
+      "phone": "رقم الهاتف",
+      "email": "البريد الإلكتروني",
+      "address": "العنوان"
+    },
+    "made_with_love": "صنع بـ",
+    "in_egypt": "في مصر",
+    "all_rights_reserved": "جميع الحقوق محفوظة",
+    "follow_us": "تابعنا"
+  },
+  "dashboard": {
+    "welcome": "أهلاً، {{name}}",
+    "manage_account": "إدارة حسابك وتتبع أنشطتك",
+    "overview": "نظرة عامة",
+    "bookings": "الحجوزات",
+    "my_bookings": "حجوزاتي",
+    "available_times": "الأوقات المتاحة",
+    "my_appointments": "مواعيدي",
+    "shop_management": "إدارة المتجر",
+    "ratings": "التقييمات",
+    "qr_code": "QR Code المتجر",
+    "generate_qr": "إنشاء QR Code سريع",
+    "stats": {
+      "favorites": "المفضلة",
+      "bookings": "الحجوزات",
+      "active_bookings": "الحجوزات النشطة",
+      "reviews": "التقييمات",
+      "shops": "المتاجر",
+      "products": "المنتجات",
+      "customers": "العملاء"
+    }
+  },
+  "admin": {
+    "dashboard": "لوحة الإدارة",
+    "total_shops": "إجمالي المتاجر",
+    "pending_shops": "المتاجر المعلقة",
+    "approved_shops": "المتاجر المعتمدة",
+    "active_shops": "المتاجر النشطة",
+    "total_users": "إجمالي المستخدمين",
+    "total_products": "إجمالي المنتجات",
+    "manage_all_shops": "إدارة جميع المتاجر",
+    "refresh_data": "تحديث البيانات",
+    "approve_activation": "الموافقة على التفعيل",
+    "reject_request": "رفض الطلب",
+    "view_commercial_record": "عرض السجل التجاري",
+    "approval_success": "تم الموافقة على طلب التفعيل بنجاح!",
+    "approval_notification": "تم إرسال إشعار فوري لصاحب المتجر",
+    "payment_info": "يمكن لصاحب المتجر الآن المتابعة لعملية الدفع",
+    "approval_failed": "فشل في الموافقة على الطلب",
+    "try_again": "حاول مرة أخرى",
+    "active_in_system": "نشطة في النظام"
+  }
 }
